--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My /biz/-style Catalog</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>/mybiz/ - Business & Finance</h1>
+    <p class="sub">Catalog View</p>
+  </header>
+
+  <main class="catalog">
+    <!-- Card -->
+    <div class="card">
+      <img src="thumb1.jpg" alt="Post image" />
+      <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
+    </div>
+
+    <div class="card">
+      <img src="thumb2.jpg" alt="Post image" />
+      <p class="snippet">What's a good entry for ETH right now?</p>
+    </div>
+
+    <div class="card">
+      <img src="thumb3.jpg" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+    <!-- Add more cards as needed -->
+  </main>
+</body>
+</html>
