--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My /biz/-style Catalog</title>
+  <title>Bobo the Bear</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>/mybiz/ - Business & Finance</h1>
+    <h1>/biz/ - Bobo & Finance</h1>
     <p class="sub">Catalog View</p>
   </header>
 
