--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main class="catalog">
     <!-- Card -->
     <div class="card">
-      <img src="thumb1.jpg" alt="Post image" />
+      <img src="bobostare.png" alt="Post image" />
       <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
     </div>
 
