--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Bobo the Bear</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body> 
   <header>
     <h1>/biz/ - Bobo & Finance</h1>
     <p class="sub">Catalog View</p>
   </header>
-
+<center>
   <main class="catalog">
     <!-- Card -->
     <div class="card">
@@ -28,7 +28,7 @@
       <img src="thumb3.jpg" alt="Post image" />
       <p class="snippet">&gt;anon sold top again lol</p>
     </div>
-
+</center>
     <!-- Add more cards as needed -->
   </main>
 </body>
