--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>/biz/ - Bobo & Finance</h1>
     <p class="sub">Catalog View</p>
   </header>
-<center>
+
+  <div class="page-wrapper">
   <main class="catalog">
     <!-- Card -->
     <div class="card">
@@ -28,8 +29,8 @@
       <img src="thumb3.jpg" alt="Post image" />
       <p class="snippet">&gt;anon sold top again lol</p>
     </div>
-</center>
     <!-- Add more cards as needed -->
   </main>
+  </div>
 </body>
 </html>
