--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="card">
-      <img src="thumb2.jpg" alt="Post image" />
+      <img src="bobocouncil_img.png" alt="Post image" />
       <p class="snippet">What's a good entry for ETH right now?</p>
     </div>
 
