--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
       <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
     </div>
 
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
+    </div>
+
     <div class="card">
       <img src="bobocouncil_img.png" alt="Post image" />
       <p class="snippet">What's a good entry for ETH right now?</p>
