--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
      <div class="card">
       <img src="bobostare.png" alt="Post image" />
-      <p class="snippet">&gt;Just bought 10k BOBO. We mooning bros...</p>
+      <p class="snippet">Just bought 10k BOBO. We mooning bros...</p>
     </div>
 
      <div class="card">
