--- a/index.html
+++ b/index.html
@@ -31,12 +31,42 @@
     </div>
 
     <div class="card">
-      <img src="bobocouncil_img.png" alt="Post image" />
+      <img src="bobostare.png" alt="Post image" />
       <p class="snippet">What's a good entry for ETH right now?</p>
     </div>
 
     <div class="card">
-      <img src="thumb3.jpg" alt="Post image" />
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
+      <p class="snippet">&gt;anon sold top again lol</p>
+    </div>
+
+     <div class="card">
+      <img src="bobostare.png" alt="Post image" />
       <p class="snippet">&gt;anon sold top again lol</p>
     </div>
     <!-- Add more cards as needed -->
