--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
   <header>
-    <h1>/biz/ - Bobo & Finance</h1>
+    <h1>/biz/ - Bears & Finance</h1>
     <p class="sub">Catalog View</p>
   </header>
 
@@ -65,10 +65,7 @@
       <p class="snippet">&gt;anon sold top again lol</p>
     </div>
 
-     <div class="card">
-      <img src="bobostare.png" alt="Post image" />
-      <p class="snippet">&gt;anon sold top again lol</p>
-    </div>
+
     <!-- Add more cards as needed -->
   </main>
   </div>
