--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
   </div>
 
 
- <section class="xpay-section">
-  <h2>XPay Cross-Chain Swap</h2>
-  <xpay-widget
-    integrator-id="b24c315e26df123ff963"
-    dst-chain="8453"
-    dst-token="0x570b1533F6dAa82814B25B62B5c7c4c55eB83947"
-  ></xpay-widget>
-</section>
+  <section class="xpay-section">
+    <h2>XPay Cross-Chain Swap</h2>
+    <xpay-widget
+      integrator-id="b24c315e26df123ff963"
+      dst-chain="8453"
+      dst-token="0x570b1533F6dAa82814B25B62B5c7c4c55eB83947"
+    ></xpay-widget>
+  </section>
+
+  <script src="https://unpkg.com/@xswap-link/sdk"></script>
   
 </body>
 </html>
