--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
       </div>
       <p class="p-dark"><span class="text-span">NOTE: </span>$BOBO is a meme token with no intrinsic value or expectation of financial return. The token is for entertainment purposes only.</p>
     </div>
-    <div class="div-block-10"><img src="images/bobonomics-1.png" loading="lazy" sizes="(max-width: 991px) 100vw, 53vw" srcset="images/bobonomics-1-p-500.png 500w, images/bobonomics-1-p-800.png 800w, images/bobonomics-1-p-1080.png 1080w, images/bobonomics-1.png 1127w" alt="" class="image-10"><img src="images/Bobonomics-Image-A2.png" loading="lazy" sizes="100vw" srcset="images/Bobonomics-Image-A2-p-500.png 500w, images/Bobonomics-Image-A2-p-800.png 800w, images/Bobonomics-Image-A2-p-1080.png 1080w, images/Bobonomics-Image-A2.png 1178w" alt="" class="image-17"><img src="images/bobonomics-2.png" loading="lazy" sizes="(max-width: 991px) 96vw, 43vw" srcset="images/bobonomics-2-p-500.png 500w, images/bobonomics-2-p-800.png 800w, images/bobonomics-2.png 872w" alt="" class="image-11"></div>
+    <div class="div-block-10">
+      <iframe
+  src="https://app.swapper.finance?integratorId=fc96d72bb41b19c46370"
+  width="100%"
+  height="560px"
+  title="Swapper Finance Widget"
+></iframe>
+      <img src="images/bobonomics-1.png" loading="lazy" sizes="(max-width: 991px) 100vw, 53vw" srcset="images/bobonomics-1-p-500.png 500w, images/bobonomics-1-p-800.png 800w, images/bobonomics-1-p-1080.png 1080w, images/bobonomics-1.png 1127w" alt="" class="image-10"><img src="images/Bobonomics-Image-A2.png" loading="lazy" sizes="100vw" srcset="images/Bobonomics-Image-A2-p-500.png 500w, images/Bobonomics-Image-A2-p-800.png 800w, images/Bobonomics-Image-A2-p-1080.png 1080w, images/Bobonomics-Image-A2.png 1178w" alt="" class="image-17"><img src="images/bobonomics-2.png" loading="lazy" sizes="(max-width: 991px) 96vw, 43vw" srcset="images/bobonomics-2-p-500.png 500w, images/bobonomics-2-p-800.png 800w, images/bobonomics-2.png 872w" alt="" class="image-11"></div>
   </div>
   <div class="w-layout-blockcontainer container-5 w-clearfix w-container">
     <h2 class="heading heading-about">About $Bobo</h2>
