--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   height="560px"
   title="Swapper Finance Widget"
 ></iframe>
-  </div>
+  </div></div>
   <div class="w-layout-blockcontainer container-5 w-clearfix w-container">
     <h2 class="heading heading-about">About $Bobo</h2>
     <div class="div-block-5">
