--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   width="100%"
   height="560px"
   title="Swapper Finance Widget"
+  border="0"
 ></iframe>
   </div></div>
   <div class="w-layout-blockcontainer container-5 w-clearfix w-container">
