--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   title="Swapper Finance Widget"
   border="0"
 ></iframe>
+      <img src="images/bobo-5-p-800.png">
   </div></div>
   <div class="w-layout-blockcontainer container-5 w-clearfix w-container">
     <h2 class="heading heading-about">About $Bobo</h2>
