--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
       <div class="div-block-6">
         <p class="heading-3">Total Supply:</p>
         <p class="display-3">69,000,000,000,000</p>
+        <p class="display-3">contract burned.</p>
+        <p class="display-3">liquidity burned.</p>
       </div>
-      <p class="p-dark"><span class="text-span">NOTE: </span>$BOBO is a meme token with no intrinsic value or expectation of financial return. The token is for entertainment purposes only.</p>
+      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on XSWAP utilizing Chainlink interagtion technology.</p>
     </div>
     <div class="div-block-10">
       <iframe
@@ -70,7 +72,7 @@
   width="50%"
   height="560px"
   title="Swapper Finance Widget"
-  border="0"
+  frameborder="0"
 ></iframe>
       <img src="images/bobo-5-p-800.png">
   </div></div>
