--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="display-3">contract burned.</p>
         <p class="display-3">liquidity burned.</p>
       </div>
-      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on XSWAP utilizing Chainlink interagtion technology.</p>
+      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on XSWAP utilizing Chainlink integration technology.</p>
     </div>
     <div class="div-block-10">
       <iframe
@@ -104,8 +104,8 @@
           <a href="https://app.uniswap.org/swap?outputCurrency=0xb90b2a35c65dbc466b04240097ca756ad2005295" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-uniswap.svg" loading="lazy" alt="" class="image-23">
             <p class="logo-label">Uniswap</p>
           </a>
-          <a href="https://www.bitget.com/spot/BOBOUSDT" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-bitget.svg" loading="lazy" alt="" class="image-24">
-            <p class="logo-label">Bitget</p>
+          <a href="https://blofin.com/spot/BOBO-USDT" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-bitget.svg" loading="lazy" alt="" class="image-24">
+            <p class="logo-label">BloFin</p>
           </a>
           <a href="https://www.xt.com/en/trade/bobo_usdt" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-xt.svg" loading="lazy" alt="" class="image-25">
             <p class="logo-label">XT</p>
