--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="div-block-18">
       <div class="div-block-21">
         <h2 class="heading heading-nfts">The Bobo Council NFTs</h2>
-        <p class="paragraph-5">Total Volume: 219 ETH</p>
+        <p class="paragraph-5">Launched December 2022</p>
         <p class="paragraph-5">Supply: 2222</p>
       </div>
       <a href="https://magiceden.us/collections/ethereum/0xc9a51f72e2fe2fb74ccccd760b929019f680467a" target="_blank" class="link-block-10 w-inline-block"><img src="images/btn-browse-all.png" loading="lazy" alt=""></a>
