--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <a href="https://app.uniswap.org/swap?outputCurrency=0xb90b2a35c65dbc466b04240097ca756ad2005295" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-uniswap.svg" loading="lazy" alt="" class="image-23">
             <p class="logo-label">Uniswap</p>
           </a>
-          <a href="https://blofin.com/spot/BOBO-USDT" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-bitget3.png" loading="lazy" alt="" class="image-24">
+          <a href="https://blofin.com/spot/BOBO-USDT" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-bitget3.svg" loading="lazy" alt="" class="image-24">
             <p class="logo-label">BloFin</p>
           </a>
           <a href="https://www.xt.com/en/trade/bobo_usdt" target="_blank" class="div-block-15 w-inline-block"><img src="images/logo-xt.svg" loading="lazy" alt="" class="image-25">
