--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
     </div>
     <div class="div-block-8">
       <div class="div-block-6">
-        <p class="heading-3">Total Supply:</p>
-        <p class="display-3">69,000,000,000,000</p>
-        <p class="display-3">contract burned.</p>
-        <p class="display-3">liquidity burned.</p>
+        <p class="heading-3">Token Info:</p>
+        <p class="display-3">69,000,000,000,000 Supply. Contract Burned. Liquidity Burned.</p> 
       </div>
       <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on XSWAP utilizing Chainlink integration technology.</p>
     </div>
