--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </a>
           </div>
         </div>
-        <div class="div-block-12 w-clearfix"><img src="images/bobo-5.png" loading="lazy" width="284" sizes="(max-width: 991px) 70vw, 30vw" alt="" srcset="images/bobo-5-p-500.png 500w, images/boboboomer2.png 800w, images/bobo-5.png 1024w" class="image-18">
+        <div class="div-block-12 w-clearfix"><img src="images/boboboomer2.png" loading="lazy" width="284" sizes="(max-width: 991px) 70vw, 30vw" alt="" srcset="images/boboboomer2500.png 500w, images/boboboomer2.png 800w, images/boboboomer2.png 1024w" class="image-18">
           <p class="bio-p">Rekt Tekashi is an OG meme artist, who has been creating Bobo content since the meme first gained popularity in 2018. He runs a well-known account on crypto twitter (X) where he uses the Bobo meme to satirize current market conditions daily in addition to providing the occasional insight.</p>
         </div>
       </section>
