--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     </div>
     <div class="div-block-10">
       <iframe
-  src="https://app.swapper.finance?integratorId=fc96d72bb41b19c46370"
+  src="https://app.uniswap.org/swap?outputCurrency=0xb90b2a35c65dbc466b04240097ca756ad2005295"
   width="100%"
   height="560px"
-  title="Swapper Finance Widget"
+  title="Uniswap Widget"
   frameborder="0"
 ></iframe>
       <img src="images/bobo-5-p-800.png">
