Update trading info and iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <p class="heading-3">Token Info:</p>
         <p class="display-3">69,000,000,000,000 Supply. Contract Burned. Liquidity Burned.</p> 
       </div>
-      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on XSWAP utilizing Chainlink integration technology.</p>
+      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on Base Chain using L2 Base Chain technology.</p>
     </div>
     <div class="div-block-10">
       <iframe
-  src="https://app.uniswap.org/swap?outputCurrency=0xb90b2a35c65dbc466b04240097ca756ad2005295"
+  src="https://app.uniswap.org/swap?outputCurrency=0x570b1533F6dAa82814B25B62B5c7c4c55eB83947"
   width="100%"
-  height="560px"
+  height="580px"
   title="Uniswap Widget"
   frameborder="0"
 ></iframe>
