--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html data-wf-page="66b02774027cbabd9ae00451" data-wf-site="669e988861cff8484adc502f">
 <head>
   <meta charset="utf-8">
-  <title>$Bobo the Bear</title>
-  <meta content="The official website for the $BOBO memecoin on Ethereum." name="description">
-  <meta content="$BOBO the Bear" property="og:title">
-  <meta content="The official website for the $BOBO memecoin on Ethereum." property="og:description">
+  <title>BOBO the Bear</title>
+  <meta content="The official website for the BOBO memecoin on Ethereum." name="description">
+  <meta content="BOBO the Bear" property="og:title">
+  <meta content="The official website for the BOBO memecoin on Ethereum." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/669e988861cff8484adc502f/66b037834538b8f010094d4a_bobo-openGraph.png" property="og:image">
-  <meta content="$BOBO the Bear" property="twitter:title">
-  <meta content="The official website for the $BOBO memecoin on Ethereum." property="twitter:description">
+  <meta content="BOBO the Bear" property="twitter:title">
+  <meta content="The official website for the BOBO memecoin on Ethereum." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/669e988861cff8484adc502f/66b037834538b8f010094d4a_bobo-openGraph.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -47,7 +47,7 @@
   <div class="w-layout-blockcontainer container-3 w-clearfix w-container">
     <h1 class="heading heading-who-is-bobo">Who is Bobo?</h1>
     <div class="div-block-5 w-clearfix"><img src="images/bobo-confused.png" loading="lazy" sizes="(max-width: 991px) 70vw, (max-width: 1279px) 37vw, (max-width: 1439px) 32vw, 30vw" srcset="images/bobo-confused-p-500.png 500w, images/bobo-confused.png 568w" alt="" class="image-8">
-      <p class="p-light">&quot;Bobo the Bear&quot; is a popular meme character that is used to satirize poor investment choices and express pessimism in both crypto and traditional finance markets on Twitter(X), Reddit, and the /biz board on 4chan, among other places on the internet. The <a href="https://x.com/bobocoineth" target="_blank" class="link-2">$Bobo</a> coin is run by <a href="#RektBio" class="link">rekt_teka$hi,</a> an OG meme artist, who has been creating Bobo content since the meme first gained popularity in 2018.</p>
+      <p class="p-light">&quot;Bobo the Bear&quot; is a popular meme character that is used to satirize poor investment choices and express pessimism in both crypto and traditional finance markets on Twitter(X), Reddit, and the /biz board on 4chan, among other places on the internet. The <a href="https://x.com/bobocoineth" target="_blank" class="link-2">BOBO</a> coin is run by <a href="#RektBio" class="link">rekt_teka$hi,</a> an OG meme artist, who has been creating Bobo content since the meme first gained popularity in 2018.</p>
     </div>
   </div>
   <div class="w-layout-blockcontainer container-4 w-container">
@@ -62,7 +62,7 @@
         <p class="heading-3">Token Info:</p>
         <p class="display-3">69,000,000,000,000 Supply. Contract Burned. Liquidity Burned.</p> 
       </div>
-      <p class="p-dark"><span class="text-span">DYK: </span>$BOBO is available to trade on Base Chain using L2 Base Chain technology.</p>
+      <p class="p-dark"><span class="text-span">DYK: </span>BOBO is available to trade on Base Chain using L2 Base Chain technology.</p>
     </div>
     <div class="div-block-10">
       <iframe
@@ -75,7 +75,7 @@
       <img src="images/bobo-5-p-800.png">
   </div></div>
   <div class="w-layout-blockcontainer container-5 w-clearfix w-container">
-    <h2 class="heading heading-about">About $Bobo</h2>
+    <h2 class="heading heading-about">About BOBO</h2>
     <div class="div-block-5">
       <section id="RektBio" class="section">
         <div class="div-block-11">
@@ -141,7 +141,7 @@
     </div>
   </div>
   <div class="w-layout-blockcontainer container-8 w-container">
-    <p class="fine-print">$BOBO is a meme token with no intrinsic value or expectation of financial return. The token is for entertainment purposes only.</p>
+    <p class="fine-print">BOBO is a meme token with no intrinsic value or expectation of financial return. The token is for entertainment purposes only.</p>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=669e988861cff8484adc502f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
