Replace logo images with updated versions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="body">
   <div id="Navbar" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="brand w-nav-brand"><img src="images/logo.png" loading="lazy" width="75" sizes="75px" alt="" srcset="images/logo-p-500.png 500w, images/logo.png 952w"><img src="images/bobo-logotype.svg" loading="lazy" id="logotype" alt="" class="image-5"></a>
+      <a href="#" class="brand w-nav-brand"><img src="images/logo.png" loading="lazy" width="75" sizes="75px" alt="" srcset="images/logo-p-500.png 500w, images/logo.png 952w"><img src="images/bobo-logotype2.svg" loading="lazy" id="logotype" alt="" class="image-5"></a>
     </div>
   </div>
   <div class="w-layout-blockcontainer container-2 w-container">
@@ -31,7 +31,7 @@
       <div class="div-block-23"><img src="images/bobo-hand.png" loading="lazy" width="159.5" data-w-id="59f5b355-cead-9948-69a9-5fafd20fa5a8" alt="" class="image-32"></div>
     </div>
     <div class="div-block-copy">
-      <div class="div-block-9"><img src="images/bobo-logotype.svg" loading="eager" alt="" class="image-3"><img src="images/bobo-tagline.svg" loading="lazy" alt="" class="image-4"></div>
+      <div class="div-block-9"><img src="images/bobo-logotype2.svg" loading="eager" alt="" class="image-3"><img src="images/bobo-tagline.svg" loading="lazy" alt="" class="image-4"></div>
       <div class="div-block-4">
         <a href="https://app.uniswap.org/swap?outputCurrency=0xb90b2a35c65dbc466b04240097ca756ad2005295" target="_blank" class="w-inline-block"><img src="images/btn-buy-now.svg" loading="lazy" alt="Buy Now" class="image-6"></a>
         <a href="https://www.dextools.io/app/en/ether/pair-explorer/0xe945683b3462d2603a18bdfbb19261c6a4f03ad1?t=1724651076994" target="_blank" class="w-inline-block"><img src="images/btn-chart.svg" loading="lazy" alt="Chart" class="image-7"></a>
