Update Open Graph and Twitter image URLs

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta content="The official website for the BOBO memecoin on Ethereum." name="description">
   <meta content="BOBO the Bear" property="og:title">
   <meta content="The official website for the BOBO memecoin on Ethereum." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/669e988861cff8484adc502f/66b037834538b8f010094d4a_bobo-openGraph.png" property="og:image">
+  <meta content="https://github.com/bobo-the-bear/web/blob/main/images/opengraph.png" property="og:image">
   <meta content="BOBO the Bear" property="twitter:title">
   <meta content="The official website for the BOBO memecoin on Ethereum." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/669e988861cff8484adc502f/66b037834538b8f010094d4a_bobo-openGraph.png" property="twitter:image">
+  <meta content="https://github.com/bobo-the-bear/web/blob/main/images/opengraph.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
