Fix capitalization in Open Graph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <meta charset="utf-8">
   <title>BOBO the Bear</title>
   <meta content="The official website for the BOBO memecoin on Ethereum." name="description">
-  <meta content="BOBO the Bear" property="og:title">
+  <meta content="Bobo the Bear" property="og:title">
   <meta content="The official website for the BOBO memecoin on Ethereum." property="og:description">
   <meta content="https://github.com/bobo-the-bear/web/blob/main/images/opengraph.png" property="og:image">
-  <meta content="BOBO the Bear" property="twitter:title">
+  <meta content="Bobo the Bear" property="twitter:title">
   <meta content="The official website for the BOBO memecoin on Ethereum." property="twitter:description">
   <meta content="https://github.com/bobo-the-bear/web/blob/main/images/opengraph.png" property="twitter:image">
   <meta property="og:type" content="website">
