Correct title from 'BOBO the Bear' to 'Bobo the Bear'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html data-wf-page="66b02774027cbabd9ae00451" data-wf-site="669e988861cff8484adc502f">
 <head>
   <meta charset="utf-8">
-  <title>BOBO the Bear</title>
+  <title>Bobo the Bear</title>
   <meta content="The official website for the BOBO memecoin on Ethereum." name="description">
   <meta content="Bobo the Bear" property="og:title">
   <meta content="The official website for the BOBO memecoin on Ethereum." property="og:description">
